--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -70,8 +70,8 @@
             <div class="nav-show-small">
               <hr>
             </div>
-            {{#navHiddenLink "signUp"}}Sign Up{{/navHiddenLink}}
-            {{#navHiddenLink "login"}}Login{{/navHiddenLink}}
+            {{#navHiddenLink "signupModal" "Sign Up" }}Sign Up{{/navHiddenLink}}
+            {{#navHiddenLink "loginModal" "Login" }}Login{{/navHiddenLink}}
             {{!-- {{#navLink "/contactUs"}}Help Center{{/navLink}} --}}
 
             <li class="nav-item dropdown ms-auto nav-hide-small">
@@ -82,9 +82,10 @@
                   <img class="nav-img-hamburger" src="/img/icons/nav/account.png" alt="account">
                 </div>
               </a>
+              <hr>
               <div class="dropdown-menu" style="left: -50px;" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#" onClick="signUp()">Sign Up</a>
-                <a class="dropdown-item" href="#" onClick="login()">Login</a>
+                <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#signupModal">Sign Up</a>
+                <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/contactUs">Help Center</a>
               </div>
