--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -1,17 +1,17 @@
 <div>
     <h4>Sanam</h4>
     <ul>
-        <li>[DONE, TESTED & REVIEWED]<a href="/createaccount"> Create Account Page</a></li>
+        <li>🔗✅🔗[DONE, TESTED & REVIEWED]<a href="/createaccount"> Create Account Page</a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/roomdetails">Room Details Page [done - minor/less adjustments needed]</a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/userdashboard">Guest User Dashboard [partial - review css]</a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/updatepassword">Guest Update Password [partial - review css]]</a></li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/guestrooms">Guest Rooms Page []</a></li>
+        <li>🔗✅🔗[DONE, TESTED & REVIEWED]<span style="color:green">[TO REVIEW & TEST]</span><a href="/guestrooms">Guest Rooms Page []</a></li>
     </ul>
 
     <h4>Nischal</h4>
     <ul>
         <li><span style="color:green">[TO REVIEW & TEST]</span> Header & Footer [done - minor/less adjustments needed ]</li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/home"> Landings Page </a></li>
+        <li>🔗✅🔗[DONE, TESTED & REVIEWED] <span style="color:green">[TO REVIEW & TEST]</span><a href="/home"> Landings Page </a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/reservations"> Guest Confirmed Reservations Page</a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/loyaltyhistory"> Guest Loyalty History Page </a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/editaccount"> Guest Edit Account Page </a></li>
@@ -19,8 +19,8 @@
 
     <h4>Taslima</h4>
     <ul>
-        <li>[DONE, TESTED & REVIEWED]<a href="/about"> About Us [minor adjustments]</a></li>
-        <li>[DONE, TESTED & REVIEWED]<a href="/contactUs">Contact Us [minor adjustments]</a></li>
+        <li>🔗✅🔗[DONE, TESTED & REVIEWED] [DONE, TESTED & REVIEWED]<a href="/about"> About Us [minor adjustments]</a></li>
+        <li>🔗✅🔗[DONE, TESTED & REVIEWED] [DONE, TESTED & REVIEWED]<a href="/contactUs">Contact Us [minor adjustments]</a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/update-email">Update Email [done - minor adjustments]</a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/view-inquiries">View Inquiries [done - minor adjustments]</a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/roomOffers">Room Results [done - needs uploading]</a></li>
@@ -36,7 +36,7 @@
             <li><a href=""> Guest Edit Account</a></li>
         </div>
         <li>Static pages</li>
-        <li><span style="color:orange">[InProgress]</span><a href="/restaurant">Restaurant Page</a></li>
+        <li>🔗✅🔗[DONE, TESTED & REVIEWED]<span style="color:orange">[InProgress]</span><a href="/restaurant">Restaurant Page</a></li>
         <li><span style="color:orange">[InProgress]</span><a href="/faqsPolicies">Hotel Faqs & Policies</a></li>
         <li>Other pages</li>
         <li><span style="color:red">[pending]</span><a href="">Forgot Password</a></li>
