--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,39 +3,13 @@
 	{{{body}}}
 </div>
 
-
-<!-- Sign Up Modal-->
-<div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="signupModalLabel">Sign Up</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="mb-3">
-            <label for="signupEmail" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="signupEmail" aria-describedby="emailHelp">
-          </div>
-          <div class="mb-3">
-            <label for="signupPassword" class="form-label">Password</label>
-            <input type="password" class="form-control" id="signupPassword">
-          </div>
-          <button type="submit" class="btn btn-primary">Sign Up</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-
 <!-- Login Modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false" >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="loginModalLabel">LOGIN TO YOUR ACCOUNT</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">X</button>
+        <button type="button" id="loginModalCloseButton" class="btn-close" data-bs-dismiss="modal" aria-label="Close">X</button>
       </div>
 	  <hr>
       <div class="modal-body">
@@ -49,7 +23,16 @@
           <div class="mb-3 text-center">
             <a href="#" class="forgot-password">Forgot Password?</a>
           </div>
-          <button type="submit" class="btn custom-login-btn">LOGIN</button>
+
+		  <button type="button" id="loginButton" class="btn custom-login-btn d-flex justify-content-center align-items-center">
+			<div id="buttonContent">
+				<span id="buttonText">Login</span>
+				<div id="spinner" class="spinner-border spinner-border-sm text-light" role="status" style="display: none;">
+				<span class="visually-hidden">Loading...</span>
+				</div>
+			</div>
+		</button>
+		
         </form>
       </div>
     </div>
