adjsuted controllers and links

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,7 +20,7 @@
       </div>
 	  <hr>
       <div class="modal-body">
-        <form>
+        <form id="loginUserForm">
           <div class="mb-3">
             <input type="email" class="form-control custom-input" id="loginEmail" placeholder="Enter your email">
           </div>
