--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -28,15 +28,8 @@
 
     <h4>Marvie</h4>
     <ul>
-        <div style="display:none">
-            <li>Reassigned to me pages</li>
-            <li><a href=""> (Static) Landing Page</a></li>
-            <li><a href=""> Guest Confirmed Reservations</a></li>
-            <li><a href=""> Guest Loyalty History</a></li>
-            <li><a href=""> Guest Edit Account</a></li>
-        </div>
         <li>Static pages</li>
-        <li>🔗✅🔗[DONE, TESTED & REVIEWED]<span style="color:orange">[InProgress]</span><a href="/restaurant">Restaurant Page</a></li>
+        <li>🔗✅🔗<span style="color:orange">[InProgress]</span><a href="/restaurant">Restaurant Page</a></li>
         <li><span style="color:orange">[InProgress]</span><a href="/faqsPolicies">Hotel Faqs & Policies</a></li>
         <li>Other pages</li>
         <li><span style="color:red">[pending]</span><a href="">Forgot Password</a></li>
@@ -44,7 +37,7 @@
         <li>[DONE, TESTED & REVIEWED]<a href="/verifyaccount"> Verify Acc Via Create Acc </a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/createaccount"> Create Account via Checkout</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/verifyaccount"> Verify Account via Checkout</a></li>
-        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/reservationinfo/:id"> Checkout Reservation Details</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/checkout"> Guest, Payment & Reservation Details at Checkout</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/reservationinfo/adssadsa"> User Reservation Details</a></li>
         <li>Hotel Staff pages</li>
         <li>[DONE, TESTED & REVIEWED]<a href="/portal"> Employee Online Portal</a></li>
