--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -3,8 +3,8 @@
     <ul>
         <li>🔗✅🔗[DONE, TESTED & REVIEWED]<a href="/createaccount"> Create Account Page</a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/roomdetails">Room Details Page [done - minor/less adjustments needed]</a></li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/userdashboard">Guest User Dashboard [partial - review css]</a></li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/updatepassword">Guest Update Password [partial - review css]]</a></li>
+        <li>🔗✅🔗<span style="color:green">[TO REVIEW & TEST]</span><a href="/dashboard/guest/65edeb166f77f37cbaec2fec">Guest User Dashboard [partial - review css]</a></li>
+        <li>🔗✅🔗<span style="color:green">[TO REVIEW & TEST]</span><a href="/updatepassword">Guest Update Password [partial - review css]]</a></li>
         <li>🔗✅🔗[DONE, TESTED & REVIEWED]<span style="color:green">[TO REVIEW & TEST]</span><a href="/guestrooms">Guest Rooms Page []</a></li>
     </ul>
 
@@ -12,18 +12,18 @@
     <ul>
         <li><span style="color:green">[TO REVIEW & TEST]</span> Header & Footer [done - minor/less adjustments needed ]</li>
         <li>🔗✅🔗[DONE, TESTED & REVIEWED] <span style="color:green">[TO REVIEW & TEST]</span><a href="/home"> Landings Page </a></li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/reservations"> Guest Confirmed Reservations Page</a></li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/loyaltyhistory"> Guest Loyalty History Page </a></li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/editaccount"> Guest Edit Account Page </a></li>
+        <li>🔗✅🔗<span style="color:green">[TO REVIEW & TEST]</span><a href="/reservations"> Guest Confirmed Reservations Page</a></li>
+        <li>🔗✅🔗<span style="color:green">[TO REVIEW & TEST]</span><a href="/loyaltyhistory"> Guest Loyalty History Page </a></li>
+        <li>🔗✅🔗<span style="color:green">[TO REVIEW & TEST]</span><a href="/editaccount"> Guest Edit Account Page </a></li>
     </ul>
 
     <h4>Taslima</h4>
     <ul>
         <li>🔗✅🔗[DONE, TESTED & REVIEWED] [DONE, TESTED & REVIEWED]<a href="/about"> About Us [minor adjustments]</a></li>
         <li>🔗✅🔗[DONE, TESTED & REVIEWED] [DONE, TESTED & REVIEWED]<a href="/contactUs">Contact Us [minor adjustments]</a></li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/update-email">Update Email [done - minor adjustments]</a></li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/view-inquiries">View Inquiries [done - minor adjustments]</a></li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/roomOffers">Room Results [done - needs uploading]</a></li>
+        <li>🔗✅🔗<span style="color:green">[TO REVIEW & TEST]</span><a href="/update-email">Update Email [done - minor adjustments]</a></li>
+        <li>🔗✅🔗<span style="color:green">[TO REVIEW & TEST]</span><a href="/view-inquiries">View Inquiries [done - minor adjustments]</a></li>
+        <li>🔗✅🔗<span style="color:green">[TO REVIEW & TEST]</span><a href="/roomOffers">Room Results [done - needs uploading]</a></li>
     </ul>
 
     <h4>Marvie</h4>
@@ -38,7 +38,7 @@
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/createaccount"> Create Account via Checkout</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/verifyaccount"> Verify Account via Checkout</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/checkout"> Guest, Payment & Reservation Details at Checkout</a></li>
-        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/reservationinfo/adssadsa"> User Reservation Details</a></li>
+        <li>🔗✅🔗<span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/reservationinfo/adssadsa"> User Reservation Details</a></li>
         <li>Hotel Staff pages</li>
         <li>[DONE, TESTED & REVIEWED]<a href="/portal"> Employee Online Portal</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/dashboard/staff/65dfe87201b6131436544414"> Hotel Staff Account Page</a></li>
