--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -22,14 +22,17 @@
 
 .logo {
     border-radius: 50%;
-    width: 70px;
+    width: 4em;
+    padding: 0.25em;
     height: auto;
 }
 
 .brand-name {
+    font-family: "Montserrat", sans-serif;
     font-size: 28px;
     font-weight: bold;
     color: rgba(51, 57, 79, 1);
+    margin-left: 0.3em;
 }
 
 .nav-item .nav-link {
@@ -49,8 +52,9 @@
     color: white;
     border: none;
     width: 120px;
-    height: 30px;
+    height: 2.5em;
     border-radius: 20px;
+    transform: translateY(-0.3em);
 }
 
 .footer {
@@ -91,7 +95,10 @@
 }
 
 @media screen and (max-width: 992px) {
-
+    .nav-item .book-now {
+        width: 10em;
+        transform: translateY(0);
+    }
 }
 
 @media screen and (max-width: 600px) {
