--- a/views/pages/hotelguest/userdashboard.hbs
+++ b/views/pages/hotelguest/userdashboard.hbs
@@ -1,96 +1,70 @@
-<style>
-  @import url(https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css);
-  @import url(https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css);
+<div class="dashboard-page-container">
+    <div class="dashboard-page-wrapper">
+        <div class="dashboard-page-content-container">
+            {{> _accountInfoSideBar img=sidebarData.img firstName=sidebarData.firstName lastName=sidebarData.lastName employeeType=sidebarData.employeeType 
+                emailAddress=sidebarData.emailAddress address=sidebarData.address mobileNumber=sidebarData.mobileNumber urlPassword="/updatepassword"
+                urlPhoto="#" urlEmail="/update-email"
+            }}
 
-  .profile-card {
-    background-color: #ffecc8;
-    padding: 20px;
-    text-align:
-      center;
-  }
+            <div class="dashboard-main-section-container">
+                
+              <div class="mt-5 mb-5">
 
-  .profile-pic {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    margin: 0 auto;
-    overflow: hidden;
-  }
+                    <div class="row">
+                      <div class="col-md-8">
+                        <div>
+                            <div>
+                                <h2 class="dash-h2-style">Hello, John Doe.</h2>
+                            </div>
+                            <a href="/editaccount"><button type="button" class="btn btn-outline-primary">Edit Profile</button></a>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <p class="fs-5">You earned <br><strong class="fs-3">100 points</strong></p>
+                        <p class="fs-7">Unlock your rewards! Book now and redeem your points</p>
+                        <a href="/loyaltyhistory">View points history</a>
+                      </div>
+                    </div>
+                    <div class="">
+                      {{#unless reservations}}
+                        <div>
+                          <p>You have no upcoming reservations</p>
+                        </div>
+                      {{/unless }}
+                      {{#if reservations}}
+                      <section class="autoplay slider slick-slider">
+                        {{#each reservations}}
+                          <a href="{{this.url}}">
+                            <div>
+                              <div class="slick-item">
+                                <img src="../../../assets/images/room1.jpg">
+                                <p class="absolute-text">{{this.interval}}</p>
+                              </div>
+                              <div>
+                                <h5>{{this.roomtType}}</h5>
+                                <p>{{this.checkIn}} - {{this.checkOut}}</p>
+                              </div>
+                            </div>
+                          </a>
+                        {{/each}}                        
+                      </section>
+                      {{/if }}
+                      <hr>
+                      <div class="dashboard-main-bottom">
+                            {{> _accountButtonList buttonData=buttonData}}
+                      </div>
+                    </div>
 
-  .social-links ul {
-    padding: 0;
-    margin:
-      0;
-  }
+              </div>
 
-  .social-links ul li {
-    list-style: none;
-    display: inline-block;
-    margin: 2px 0;
-    font-size: 20px;
-  }
+            </div>
+        </div>
+    </div>
+</div>
 
-  .social-links ul li a {
-    color: #333;
-    padding: 2px 6px;
-    border-radius: 5px;
-    transition: 0.5s;
-  }
 
-  .social-links ul li:hover a {
-    background-color: #333333;
-    color: #fff;
-    transition: 0.5s;
-  }
 
-  .custom-button {
-    background-color: #FFA500;
-    color: #ffffff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    height: 200px;
-    width: 200px;
-  }
-
-  .custom-button:hover {
-    background-color: #FF8C00;
-  }
-
-  .slick-next {
-    right:  8px;
-  }
-
-  .slick-prev {
-    left: 0px;
-    z-index: 1;
-  }
-
-  .slick-item {
-    position: relative;
-
-  }
-
-  .absolute-text {
-    position: absolute;
-    bottom: -16px;
-    width: 100%;
-    background-color: #f5e3e38f;
-    width: 100%;
-    padding: 5px;   
-  }
-
-  .slick-slider div {
-    margin-right: 3px;
-  }
-
-  .slick-slider div img {
-    width: 100%;
-  }
-</style>
-
+{{!-- 
 <div class="container mt-5 mb-5">
   <div class="row">
     <!-- User Profile Section -->
@@ -197,19 +171,5 @@
 
 
 </div>
-</div>
+</div> --}}
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"
-  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
-  integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<Script>
-  $('.autoplay').slick({
-    slidesToShow: 3,
-    slidesToScroll: 1,
-    autoplay: true,
-    dots: true,
-    autoplaySpeed: 2000,
-  });
-</script>
