--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -43,54 +43,119 @@
     crossorigin="anonymous"></script>
   <script defer src="/js/main.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-</head>
 
+  {{#if addSlick}}
+    <script defer src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+    integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  {{/if}}
+</head>
+<style>
+  @import url(https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css);
+  @import url(https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css);
+</style>
 <body>
 
   <div class="nav-container">
     <nav class="navbar navbar-expand-lg p-0">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
-          <img src="/img/placeholder/hotelCalifornia.png" class="logo" alt="Hotel California">
+          <img src="/img/placeholder/hotel_california_logo.png" class="logo" alt="Hotel California">
           <span class="brand-name">Hotel California</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto ">
+
             {{#navLink "/"}}Home{{/navLink}}
             {{#navLink "/about"}}About Us{{/navLink}}
             {{#navLink "/guestrooms"}}Guest Rooms{{/navLink}}
             {{#navLink "/restaurant"}}Restaurant{{/navLink}}
             {{#navLink "/contactUs"}}Contact Us{{/navLink}}
-            {{#navLink "/roomdetails"}} <button class="book-now">Book Now</button> {{/navLink}}
-  
+            {{!-- {{#navLink "/roomdetails"}} <button class="book-now">Book Now</button> {{/navLink}} --}}
+            {{#equal userType "Guest"}}
+              {{#navLink "/dashboard/guest/{{id}}"}}Dashboard {{/navLink}}
+            {{/equal}}
+
+            {{#equal userType "Staff"}}
+              <p>Staff</p>
+            {{/equal}}
+
+            {{#equal userType "Manager"}}
+              <p>Manager</p>
+            {{/equal}}
+
+            {{#equal userType "Admin"}}
+              <p>Admin</p>
+            {{/equal}}
+
+
+
+            <li class="nav-item">
+              <a class="nav-link" href="/roomOffers">
+                <button class="book-now">Book Now</button>
+              </a>
+            </li>
+
             <div class="nav-show-small">
               <hr>
             </div>
+
             {{#navHiddenLink "Sign Up" "/createaccount" }}Sign Up{{/navHiddenLink}}
             {{#navHiddenLinkModal "loginModal" "Login" }}Login{{/navHiddenLinkModal}}
-            {{!-- {{#navLink "/contactUs"}}Help Center{{/navLink}} --}}
 
             <li class="nav-item dropdown ms-auto nav-hide-small">
-              <a class="nav-link dropdown-toggle login-dropdown" href="#" id="navbarDropdown" role="button"
+
+              <div class="nav-link dropdown-toggle login-dropdown" id="navbarDropdown" role="button"
                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div>
                   <img class="nav-img-hamburger" src="/img/icons/nav/hamburger.png" alt="hamburger">
                   <img class="nav-img-hamburger" src="/img/icons/nav/account.png" alt="account">
                 </div>
-              </a>
-              <div class="dropdown-menu" style="left: -50px;" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/createaccount">Sign Up</a>
-                <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/contactUs">Help Center</a>
               </div>
+              <div class="dropdown-menu" style="left: -50px;" aria-labelledby="navbarDropdown">
+                {{#unless userType}}
+                  <a class="dropdown-item" href="/createaccount">Sign Up</a>
+                  <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="/contactUs">Help Center</a>
+                {{/unless}}
+
+                {{#equal userType "Guest"}}
+                  <p>Guest</p>
+                {{/equal}}
+
+                {{#equal userType "Staff"}}
+                  <p>Staff</p>
+                {{/equal}}
+
+                {{#equal userType "Manager"}}
+                  <p>Manager</p>
+                {{/equal}}
+
+                {{#equal userType "Admin"}}
+                  <p>Admin</p>
+                {{/equal}}
+
+                {{#if userType}}
+                   <a class="dropdown-item" href="#">Logout</a>
+                {{/if}}
+
+               
+              </div>
+              
             </li>
+
           </ul>
         </div>
+
+
       </div>
     </nav>
   </div>
