added footer link protection

--- a/views/pages/public/about.hbs
+++ b/views/pages/public/about.hbs
@@ -25,7 +25,7 @@ Today, Hotel California stands not just as a hotel, but as a cherished destinati
     </div>
 </section>
 
- <section class="team-members">
+ <section class="team-members" id="members">
         <h2>Members</h2>
         <div class="members-list">
             {{#each members}}
