--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -30,7 +30,7 @@
     <ul>
         <li>Static pages</li>
         <li>🔗✅🔗<span style="color:orange">[InProgress]</span><a href="/restaurant">Restaurant Page</a></li>
-        <li><span style="color:orange">[InProgress]</span><a href="/faqsPolicies">Hotel Faqs & Policies</a></li>
+        <li>🔗✅🔗<span style="color:orange">[InProgress]</span><a href="/faqsPolicies">Hotel Faqs & Policies</a></li>
         <li>Other pages</li>
         <li><span style="color:red">[pending]</span><a href="">Forgot Password</a></li>
         <li><span style="color:red">[pending]</span><a href="">Forgot Password Verify</a></li>
