--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -52,10 +52,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   {{/if}}
 </head>
-<style>
-  @import url(https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css);
-  @import url(https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css);
-</style>
 <body>
 
   <div class="nav-container">
@@ -83,15 +79,16 @@
               {{#navLink (concat "/dashboard/guest/" id)}}Dashboard{{/navLink}}
             {{/equal}}
 
-            {{#equal userType "Staff"}}
-              <p>Staff</p>
+            {{#equal userType "staff"}}
+              {{#navLink (concat "/dashboard/staff/" id)}}Dashboard{{/navLink}}
+              {{#navLink "/dashboard/staff/inquiries"}}Inbox{{/navLink}}
             {{/equal}}
 
-            {{#equal userType "Manager"}}
+            {{#equal userType "manager"}}
               <p>Manager</p>
             {{/equal}}
 
-            {{#equal userType "Admin"}}
+            {{#equal userType "admin"}}
               <p>Admin</p>
             {{/equal}}
 
@@ -134,21 +131,24 @@
                   <a class="dropdown-item" href="/dashboard/guest/loyalty-history">Loyalty History</a>
                 {{/equal}}
 
-                {{#equal userType "Staff"}}
-                  <p>Staff</p>
+                {{#equal userType "staff"}}
+                  <a class="dropdown-item" href="/dashboard/staff/inquiries">Inbox</a>
+                  <a class="dropdown-item" href="/dashboard/staff/checkin">Guest Checkin</a>
+                  <a class="dropdown-item" href="/dashboard/staff/createReservations">Create Reservation</a>
+                  <a class="dropdown-item" href="/dashboard/staff/viewReservations">Find Reservation</a>
                 {{/equal}}
 
-                {{#equal userType "Manager"}}
+                {{#equal userType "manager"}}
                   <p>Manager</p>
                 {{/equal}}
 
-                {{#equal userType "Admin"}}
+                {{#equal userType "admin"}}
                   <p>Admin</p>
                 {{/equal}}
 
                 {{#if userType}}
                    <hr>
-                   <a class="dropdown-item" href="#">Logout</a>
+                   <a class="dropdown-item" id="logout">Logout</a>
                 {{/if}}
 
                
