protected all routes for guest

--- a/views/pages/hotelguest/userdashboard.hbs
+++ b/views/pages/hotelguest/userdashboard.hbs
@@ -14,7 +14,7 @@
                       <div class="col-md-8">
                         <div>
                             <div>
-                                <h2 class="dash-h2-style">Hello, John Doe.</h2>
+                                <h2 class="dash-h2-style">Hello, {{sidebarData.firstName}} {{sidebarData.lastName}}.</h2>
                             </div>
                             <a href="/dashboard/guest/editacccount"><button type="button" class="btn btn-outline-primary">Edit Profile</button></a>
                         </div>
