added new pages and secured routes for employee staff

--- a/views/pages/employee/empDashboard.hbs
+++ b/views/pages/employee/empDashboard.hbs
@@ -9,7 +9,7 @@
                 <div class="dashboard-main-top">
                     <div>
                         <div>
-                            <h2 class="dash-h2-style">Hello, Shawna M.</h2>
+                            <h2 class="dash-h2-style">Hello, {{sidebarData.firstName}} {{sidebarData.lastName}}</h2>
                         </div>
                         <a href="/dashboard/staff/edit"><button type="button" class="btn btn-outline-primary">Edit Profile</button></a>
                     </div>
